fix: remove the scrollbar gutter when not needed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -251,7 +251,7 @@ html {
   letter-spacing: -0.03125em;
 
   scroll-behavior: smooth;
-  scrollbar-gutter: stable;
+  scrollbar-gutter: auto;
 }
 
 body {
